--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,23 @@
-.app-wrapper{
-  display:grid;
+.app-wrapper {
+  display: grid;
   width: 800px;
   margin: 0 auto;
 
   grid-template-areas:
-  "header header"
-  "nav content";
+          "header header"
+          "nav content";
 
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
+}
+
+.app-wrapper-content {
+  grid-area: content;
+  background-color: white;
+}
+
+.app-wrapper-content img{
+  width: 658px;
 }
 
