--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,13 @@
 .app-wrapper {
   display: grid;
-  width: 800px;
-  margin: 0 auto;
+  margin: 10px;
 
   grid-template-areas:
           "header header"
           "nav content";
 
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
+  grid-template-rows: 1fr minmax(500px, 700px);
+  grid-template-columns: minmax(100px, 145px) 10fr;
   grid-gap: 10px;
 }
 
