--- a/src/components/dialogs/dialogItem/DialogItem.css
+++ b/src/components/dialogs/dialogItem/DialogItem.css
@@ -1,4 +1,4 @@
-.item{
+.dialog-item{
     margin: 10px 20% 10px 30%;
     min-height: 50px;
     max-width: 50px;
@@ -6,7 +6,7 @@
     background-color: antiquewhite;
 }
 
-.item:hover{
+.dialog-item:hover{
     background-color: #dbdbdb;
 }
 
