--- a/src/components/dialogs/Dialogs.css
+++ b/src/components/dialogs/Dialogs.css
@@ -6,14 +6,18 @@
 
 .dialogs{
     width: 100%;
+    min-width: 580px;
     height: 100%;
+    min-height: 530px;
     border: 1px solid #dbdbdb;
+    overflow: hidden;
 }
 
 .dialogItems{
     display: inline-block;
     vertical-align: top;
     width: 15%;
+    min-width: 86px;
     height: 100%;
 }
 
@@ -23,6 +27,7 @@
     vertical-align: top;
     width: 85%;
     height: 100%;
+    min-height: 530px;
 }
 
 
