--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,6 +1,8 @@
 .nav{
     width: 15%;
+    max-width: 94px;
     height: 99%;
+    min-height: 530px;
     margin-top: 1%;
     display: inline-block;
     vertical-align: top;
