--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,6 +1,8 @@
 .profile-container{
     height: 100%;
     min-height: 530px;
-    overflow-x: hidden;
-    overflow-y: auto;
+}
+
+.profile-container img{
+    width: 100%;
 }
